# yuity

./: README.md  assessment_brief.md  cse4002writ1-tourmateamended---copy.docx  flowcharts_design.md  generate_architecture_diagrams.py  generate_flowcharts.py  system_analysis_planning.md  system_architecture_design.md  task2_architecture_summary.md  task3_flowcharts_summary.md  task4_environment_summary.md  test_documentation.md  tourmate_system_brief.md
Flow charts and test doc/: TOURMATE_Test_Documentation.docx
plan/: flowcharts.md  system_plan.md
src/: Makefile  main.cpp  sales.cpp  sales.h  sales.txt  user.cpp  user.h  users.txt  vehicle.cpp  vehicle.h
testing/: test_plan.md
tourmate_cpp/: CMakeLists.txt  Makefile  PROJECT_DOCUMENTATION.md  README.md  TASK5_COMPLETED.md  TASK5_FINAL_COMPLETE.md  TASK6_COMPLETED.md  TASK7_COMPLETED.md  build.bat  generate_sample_data.cpp  main_tourmate.cpp  run_auth_test.bat  run_sales_test.bat  run_test.bat  run_tourmate.bat  run_vehicle_test.bat  test_authentication.cpp  test_core.cpp  test_sales.cpp  test_vehicle.cpp
tourmate_cpp/data/: company.csv  sales.csv  users.csv  vehicles.csv
tourmate_cpp/docs/: task5_core_data_structures.md  task6_authentication.md  task7_vehicle_management.md
tourmate_cpp/src/headers/: AuthenticationManager.h  MainMenuSystem.h  Sales.h  SalesManager.h  User.h  Utilities.h  Vehicle.h  VehicleManager.h
tourmate_cpp/src/source/: AuthenticationManager.cpp  MainMenuSystem.cpp  Sales.cpp  SalesManager.cpp  User.cpp  Utilities.cpp  Vehicle.cpp  VehicleManager.cpp
